<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application strings -->
    <string name="app_name">Snaapiq</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Email/Username</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_FB_button">Login with Facebook</string>
    <string name="login_TW_button">Login with Twitter</string>
    <string name="token_button">get token</string>
    <string name="result"></string>
    <string name="title_activity_contest">ContestActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
        
    <!-- Tab names -->
    <string name="tab1">Contests</string>
    <string name="tab2">Rate</string>
    <string name="tab3">Market</string>
    <string name="tab4">Activity</string>
    <string name="tab5">Profile</string> 
    
    <!-- API URL -->
    <string name="api_getUser">https://test.snaapiq.com/api2/user</string>
    <string name="api_login">https://test.snaapiq.com/api2/user/login.json</string>
    <string name="api_getImageLocalList">https://test.snaapiq.com/api2/quest/local?minStatus=%1$s&amp;maxStatus=%1$s&amp;date=%2$s&amp;page.page=%3$s&amp;latitude=%4$s&amp;longitude=%5$s</string>
    <string name="api_getImageGlobalList">https://test.snaapiq.com/api2/quest?minStatus=%1$s&amp;maxStatus=%1$s&amp;date=%2$s&amp;page.page=%3$s</string>
    <!-- Messages -->
    <string name="warn_unknownLoginFailure">Unable to login for unknown reason</string>
    <string name="warn_invalidCookie">The cookie that received is invalid</string>
    
    <!-- Fontawesome icon mapping -->
    <string name="fa_contests">&#xf091;</string>	<!-- Contests icon -->
    <string name="fa_rate">&#xf005;</string>		<!-- Rate icon -->
    <string name="fa_market">&#xf07a;</string>		<!-- Market icon -->
    <string name="fa_activity">&#xf1d7;</string>	<!-- Activity icon -->
    <string name="fa_profile">&#xf007;</string>		<!-- Profile icon -->
    <string name="fa_sort">&#xf0dc;</string>  		<!-- Profile sort icon -->
    <string name="fa_th_list">&#xf00b;</string>		<!-- profile change list view icon -->
    
    <string name="fa_coin">&#xf111;</string>    
    <string name="fa_clock">&#xf017;</string>    
    <string name="fa_users">&#xf0c0;</string>    
    <string name="fa_map_mark">&#xf041;</string>  
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_trophy">&#xf091;</string> 		<!-- profile iswinner -->
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_info_circle">&#xf05a;</string>
    
</resources>
